# m0dular-source-sdk

./: .gitignore  LICENSE.md  README.md  meson.build
features/: autostrafer.h  bhop.h  engineprediction.h  essentials.h  fakelag.h  features.h  gamemovement.h  gametrace.cpp  gametrace.h  resolver.cpp  resolver.h  types.h
source_2007/: ibaseentity.h  icliententity.h  iclientnetworkable.h  iclientrenderable.h  iclientthinkable.h  iclientunknown.h  ihandleentity.h  sdk.h  view_sharedv1.h
source_csgo/: baseentity.cpp  baseplayer.h  clientstate.h  combatweapon.h  debugoverlay.h  engineclient.h  enums.h  gamemovement.h  glow_object.h  icliententity.h  iclientrenderable.h  iclientthinkable.h  icollideable.h  ienginetrace.h  ihandleentity.h  input.h  ivmodelinfo.h  miscents.h  modelrender.h  offsets.h  physics.h  sdk.h  studio.h  studiorendercontext.h  view_sharedv2.h
source_css/: baseentity.cpp  baseplayer.h  clientstate.h  combatweapon.h  engineclient.h  enums.h  ivmodelinfo.h  sdk.h
source_shared/: appsystem.h  baseclient.h  baseentity.h  basehandle.h  clientclass.h  color.h  convar.h  cvar.h  effects.h  effects_hook.h  ehandle.h  enums.h  eventlistener.h  eventmanager.h  globalvars.h  glow_object.h  glow_object_manager.h  hooks.h  host_state.h  icliententity.h  icliententitylist.h  iclientmode.h  iclientnetworkable.h  iclientunknown.h  iconvar.h  ienginetrace.h  inetchannelinfo.h  interfaces.h  mdl.h  mdlcache.h  misc.h  modelloader.h  netvars.cpp  netvars.h  offsets.h  panel.h  physicssurfaceprops.h  platform.h  prediction.h  recv.h  (+15 more)
tests/: movefix.cpp
